# watsonx-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  reference.md
examples/wxai/: 01_setup_environment.py  02_prompt_template.py  03_model_inference.py  04_upload_to_cos.py  05_create_vector_index.py  06_ingest_vectors.py  07_search_vectors.py  08_rag_service_deploy.py  09_simple_agents.py  10_complex_agents.py  11_rag_agent.py  12_agent_supervisor.py  13_ai_service_deploy.py
examples/wxo/: requirements.txt  wxo_guide.md
examples/wxo/01_agent_basic/: import-all.sh  remove-all.sh
examples/wxo/02_agent_knowledge/: import-all.sh  readme.md  remove-all.sh
examples/wxo/03_agent_multi_collab/: README.md  import-all.sh  remove-all.sh
examples/wxo/04_flow_basic/: README.md  import-all.sh  remove-all.sh
examples/wxo/05_flow_agents/: README.md  import-all.sh  remove-all.sh
examples/wxo/06_flow_branch/: README.md  import-all.sh  remove-all.sh
examples/wxo/07_flow_decision/: README.md  import-all.sh  remove-all.sh
examples/wxo/08_flow_prompt_node/: README.md  import-all.sh  remove-all.sh
examples/wxo/09_flow_knowledge/: README.md  import-all.sh  remove-all.sh
examples/wxo/10_flow_document_classifier/: README.md  import-all.sh  remove-all.sh
examples/wxo/11_flow_document_extractor/: README.md  import-all.sh  remove-all.sh
examples/wxo/12_flow_document_processing/: README.md  (+2 more)
examples/wxo/17_toolkit_mcp/: README.md  __init__.py  import-all.sh  mcp.json  mcp_server.py  pyproject.toml  remove-all.sh  tools.py
pipelines/: chat_invoke.py  read_from_cos.py
(+65 files in other folders)
