[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-mcp-server"
version = "1.0.0"
description = "Basic MCP Server for watsonx Orchestrate"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "anyio>=3.0.0"
]

[project.scripts]
basic-mcp-server = "mcp_server:main"
